cambios en el diseno

--- a/css/index.css
+++ b/css/index.css
@@ -21,5 +21,69 @@ body{
 #logo{
 	width: 200px;
 	height: 200px;
-	border: 3px solid red;
+	float: left;
+	margin-right: 2%;
 }
+
+#title{
+	/*margin-left: 40%;*/
+}
+
+.titleNajuvis{
+	/*float: left;*/
+	display: inline;
+}
+
+.eslogan{
+	float: right;
+	display: inline;
+}
+
+
+/*************************** BOOSTRAP CHANGES ********************************/
+
+.navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus {
+	color: #000;  /*Sets the text hover color on navbar*/
+	background-color: #D4D2D2;
+}
+
+.navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active >   
+ a:hover, .navbar-default .navbar-nav > .active > a:focus {
+color: white; /*BACKGROUND color for active*/
+background-color: #030033;
+}
+
+  .navbar-default {
+    background-color: #D6DB82;  /*backgorund color del nav */
+    border-color: #030033;  /*/*backgorund color del nav*/
+}
+
+  .dropdown-menu > li > a:hover,
+   .dropdown-menu > li > a:focus {
+    color: #262626;
+   text-decoration: none;
+  background-color: #66CCFF;  /*change color of links in drop down here*/
+   }
+
+ .nav > li > a:hover,
+ .nav > li > a:focus {
+    text-decoration: none;
+    background-color: silver; /*Change rollover cell color here*/
+  }
+
+
+  .navbar-default .navbar-nav > li > a {
+   color: white; /*Change active text color here*/
+
+  }
+
+ .jumbotron {
+	 background-color: #BBA163;
+	 margin-bottom: 0px;
+	 padding: 1%;
+}
+
+.navbar {
+    border-radius: 0px;
+}
+
