--- a/templates/recommended.html
+++ b/templates/recommended.html
@@ -1,4 +1,5 @@
 <!--start-->
+<div ng-show="pageToShow == 0">
         <div id='ninja-slider'>
             <ul>
                 <li><div data-image="images/products/1.jpg" class="imagesSlider"></div></li>
@@ -13,27 +14,27 @@
             </ul>
         </div>
         <!--end-->
-	  		<h3>Recomendados:</h3>
-	  		<!--<img src="images/products/1.jpg" height="100" width="100" />-->
-				<ul class="list-group">
-				 <div class="table-responsive">          
-				  <table class="table">
-				    <tbody>
-				      <tr>
-				        <td><a href="#"><img src="images/products/1.jpg" height="100" width="100" class="imageRecommended" /></a><br/>Pastel</td>
-				        <td><a href="#"><img src="images/products/1.jpg" height="100" width="100" class="imageRecommended" /></a><br/>Pastel</td>
-				        <td><a href="#"><img src="images/products/1.jpg" height="100" width="100" class="imageRecommended" /></a><br/>Pastel</td>
-				      </tr>
-				      <tr>
-				        <td><a href="#"><img src="images/products/1.jpg" height="100" width="100" class="imageRecommended" /></a><br/>Pastel</td>
-				        <td><a href="#"><img src="images/products/1.jpg" height="100" width="100" class="imageRecommended" /></a><br/>Pastel</td>
-				        <td><a href="#"><img src="images/products/1.jpg" height="100" width="100" class="imageRecommended" /></a><br/>Pastel</td>
-				      </tr>
-				      <tr>
-				        <td><a href="#"><img src="images/products/1.jpg" height="100" width="100" class="imageRecommended" /></a><br/>Pastel</td>
-				        <td><a href="#"><img src="images/products/1.jpg" height="100" width="100" class="imageRecommended" /></a><br/>Pastel</td>
-				        <td><a href="#"><img src="images/products/1.jpg" height="100" width="100" class="imageRecommended" /></a><br/>Pastel</td>
-				      </tr>
-				    </tbody>
-				  </table>
-				  </div>
+  		<h3>Recomendados:</h3>
+  		<!--<img src="images/products/1.jpg" height="100" width="100" />-->
+			 <div class="table-responsive">          
+			  <table class="table">
+			    <tbody>
+			      <tr>
+			        <td><a href="#"><img src="images/products/1.jpg" height="100" width="100" class="imageRecommended" /></a><br/>Pastel</td>
+			        <td><a href="#"><img src="images/products/1.jpg" height="100" width="100" class="imageRecommended" /></a><br/>Pastel</td>
+			        <td><a href="#"><img src="images/products/1.jpg" height="100" width="100" class="imageRecommended" /></a><br/>Pastel</td>
+			      </tr>
+			      <tr>
+			        <td><a href="#"><img src="images/products/1.jpg" height="100" width="100" class="imageRecommended" /></a><br/>Pastel</td>
+			        <td><a href="#"><img src="images/products/1.jpg" height="100" width="100" class="imageRecommended" /></a><br/>Pastel</td>
+			        <td><a href="#"><img src="images/products/1.jpg" height="100" width="100" class="imageRecommended" /></a><br/>Pastel</td>
+			      </tr>
+			      <tr>
+			        <td><a href="#"><img src="images/products/1.jpg" height="100" width="100" class="imageRecommended" /></a><br/>Pastel</td>
+			        <td><a href="#"><img src="images/products/1.jpg" height="100" width="100" class="imageRecommended" /></a><br/>Pastel</td>
+			        <td><a href="#"><img src="images/products/1.jpg" height="100" width="100" class="imageRecommended" /></a><br/>Pastel</td>
+			      </tr>
+			    </tbody>
+			  </table>
+			  </div>
+</div>
