--- a/css/index.css
+++ b/css/index.css
@@ -76,6 +76,7 @@ h3{
 
 footer
 {
+	margin-top: 5%;
 	position: fixed;
 	bottom: 0;
 	width: 100%;
@@ -106,7 +107,7 @@ footer
 .productsToShow{
 	margin-left: 0%;
 	margin-top: 5%;
-	position: absolute;
+	/*position: absolute;*/
 	border: 2px groove #72A0FF;
 	padding: 1%;
 	margin-right: 3%;
@@ -170,6 +171,10 @@ footer
 
 @media all and (max-width: 770px) {
     .redSocial { display:none; }
+}
+
+.searcher{
+	float: right;
 }
 
 /********************BOOTSTRAP************************/
